[package]
name = "compio-boring2"
version = { workspace = true }
authors = ["0x676e67 <gngppz@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = { workspace = true }
repository = { workspace = true }
homepage = "https://github.com/0x676e67/boring2"
documentation = "https://docs.rs/compio-boring2"
description = """
An implementation of SSL streams for Compio backed by BoringSSL
"""

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Use a FIPS-validated version of boringssl.
fips = ["boring/fips", "boring-sys/fips"]

# Add a prefix to all symbols in libcrypto and libssl to prevent conflicts
# with other OpenSSL or BoringSSL versions that might be linked in the same process.
prefix-symbols = ["boring-sys/prefix-symbols"]

[dependencies]
boring = { workspace = true }
boring-sys = { workspace = true }
compio = { workspace = true }
compio-io = { workspace = true, features = ["compat"]}

[dev-dependencies]
futures = { workspace = true }
compio = { workspace = true, features = [ "macros"] }
anyhow = { workspace = true }
