[package]
name = "hyper-rboring"
version = "2.2.2"
authors = ["Steven Fackler <sfackler@gmail.com>", "Ivan Nikulin <ifaaan@gmail.com>"]
edition = "2018"
description = "Hyper TLS support via BoringSSL"
license = "MIT/Apache-2.0"
repository = "https://github.com/cloudflare/boring"
documentation = "https://docs.rs/hyper-boring"
readme = "README.md"
exclude = ["test/*"]

[features]
default = ["runtime"]

runtime = ["hyper/runtime"]
fips = ["tokio-rboring/fips"]

[dependencies]
antidote = "1.0.0"
http = "0.2.11"
hyper = { package = "rhyper", version = "0.14", default-features = false, features = ["client"] }
linked_hash_set = "0.1"
once_cell = "1.0"
rboring = { version = ">=1.1.0,<3.0.0", path = "../boring" }
tokio = "1"
tokio-rboring = { version = "2", path = "../tokio-boring" }
tower-layer = "0.3"

[dev-dependencies]
hyper = { package = "rhyper", version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
